[package]

name = "freetype-rs"
version = "0.26.0"
authors = ["Coeuvre <coeuvre@gmail.com>"]
keywords = ["freetype", "font", "glyph"]
description = "Bindings for FreeType font library"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PistonDevelopers/freetype-rs.git"
homepage = "https://github.com/PistonDevelopers/freetype-rs"

[lib]

name = "freetype"

[dependencies]

bitflags = "1.0.0"
libc = "0.2.1"
freetype-sys = "0.13.0"

[dev-dependencies]

unicode-normalization = "0.1.0"
