[package]
name = "freetype-rs"
version = "0.37.0"
authors = ["Coeuvre <coeuvre@gmail.com>"]
keywords = ["freetype", "font", "glyph"]
description = "Bindings for FreeType font library"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PistonDevelopers/freetype-rs.git"
homepage = "https://github.com/PistonDevelopers/freetype-rs"
edition = "2021"

[lib]
name = "freetype"

[features]
bundled = ["freetype-sys/bundled"]

[dependencies]
bitflags = "2.4.0"
libc = "0.2.1"
freetype-sys = "0.21.0"

[dev-dependencies]
unicode-normalization = "0.1.0"
