[package]

name = "freetype-sys"
version = "0.0.1"
authors = ["Coeuvre <coeuvre@gmail.com>"]
build = "build.rs"
tags = ["freetype", "ffi"]
description = "Low level binding for FreeType font library"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/PistonDevelopers/freetype-rs.git"
homepage = "https://github.com/PistonDevelopers/freetype-rs"

[build-dependencies]
pkg-config = "*"
