[package]

name = "font_with_piston"
version = "0.0.0"
authors = ["Coeuvre <coeuvre@gmail.com>"]

[[bin]]

name = "font_with_piston"
path = "./font_with_piston.rs"

[dependencies.freetype-rs]

path = "../../"

[dependencies.pistoncore-event]

git = "https://github.com/pistondevelopers/event"

[dependencies.piston2d-opengl_graphics]

git = "https://github.com/pistondevelopers/opengl_graphics"

[dependencies.piston2d-graphics]

git = "https://github.com/pistondevelopers/graphics"

[dependencies.pistoncore-sdl2_window]

git = "https://github.com/pistondevelopers/sdl2_window"

